parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> items
Rule 2     items -> items item
Rule 3     items -> item
Rule 4     item -> decl
Rule 5     item -> func
Rule 6     item -> stmt
Rule 7     decl -> type varlist SEMICOLON
Rule 8     type -> INT
Rule 9     type -> FLOAT
Rule 10    varlist -> varlist COMMA var
Rule 11    varlist -> var
Rule 12    var -> ID
Rule 13    var -> ID LSQUARE NUMBER RSQUARE
Rule 14    func -> type ID LPAREN params RPAREN LBRACE funcbody RBRACE
Rule 15    params -> paramlist
Rule 16    params -> empty
Rule 17    paramlist -> paramlist COMMA param
Rule 18    paramlist -> param
Rule 19    param -> type ID
Rule 20    funcbody -> funcstmts func_return
Rule 21    funcstmts -> funcstmts stmt
Rule 22    funcstmts -> empty
Rule 23    func_return -> RETURN expr SEMICOLON
Rule 24    func_return -> empty
Rule 25    stmt -> ID EQUALS expr SEMICOLON
Rule 26    stmt -> ID LSQUARE expr RSQUARE EQUALS expr SEMICOLON
Rule 27    stmt -> PRINT LPAREN expr RPAREN SEMICOLON
Rule 28    stmt -> IF LPAREN expr RPAREN LBRACE block RBRACE else_block
Rule 29    else_block -> ELSE LBRACE block RBRACE
Rule 30    else_block -> empty
Rule 31    block -> stmts
Rule 32    block -> empty
Rule 33    stmts -> stmts stmt
Rule 34    stmts -> stmt
Rule 35    stmt -> WHILE LPAREN expr RPAREN LBRACE block RBRACE
Rule 36    stmt -> ID LPAREN call_args RPAREN SEMICOLON
Rule 37    call_args -> call_args COMMA expr
Rule 38    call_args -> expr
Rule 39    call_args -> empty
Rule 40    expr -> expr PLUS expr
Rule 41    expr -> expr MINUS expr
Rule 42    expr -> expr TIMES expr
Rule 43    expr -> expr DIVIDE expr
Rule 44    expr -> expr EQ expr
Rule 45    expr -> expr NE expr
Rule 46    expr -> expr LT expr
Rule 47    expr -> expr GT expr
Rule 48    expr -> expr LE expr
Rule 49    expr -> expr GE expr
Rule 50    expr -> FNUMBER
Rule 51    expr -> NUMBER
Rule 52    expr -> ID
Rule 53    expr -> ID LSQUARE expr RSQUARE
Rule 54    expr -> ID LPAREN call_args RPAREN
Rule 55    empty -> <empty>

Terminals, with rules where they appear

COMMA                : 10 17 37
DIVIDE               : 43
ELSE                 : 29
EQ                   : 44
EQUALS               : 25 26
FLOAT                : 9
FNUMBER              : 50
GE                   : 49
GT                   : 47
ID                   : 12 13 14 19 25 26 36 52 53 54
IF                   : 28
INT                  : 8
LBRACE               : 14 28 29 35
LE                   : 48
LPAREN               : 14 27 28 35 36 54
LSQUARE              : 13 26 53
LT                   : 46
MINUS                : 41
NE                   : 45
NUMBER               : 13 51
PLUS                 : 40
PRINT                : 27
RBRACE               : 14 28 29 35
RETURN               : 23
RPAREN               : 14 27 28 35 36 54
RSQUARE              : 13 26 53
SEMICOLON            : 7 23 25 26 27 36
TIMES                : 42
WHILE                : 35
error                : 

Nonterminals, with rules where they appear

block                : 28 29 35
call_args            : 36 37 54
decl                 : 4
else_block           : 28
empty                : 16 22 24 30 32 39
expr                 : 23 25 26 26 27 28 35 37 38 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 53
func                 : 5
func_return          : 20
funcbody             : 14
funcstmts            : 20 21
item                 : 2 3
items                : 1 2
param                : 17 18
paramlist            : 15 17
params               : 14
program              : 0
stmt                 : 6 21 33 34
stmts                : 31 33
type                 : 7 14 19
var                  : 10 11
varlist              : 7 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . items
    (2) items -> . items item
    (3) items -> . item
    (4) item -> . decl
    (5) item -> . func
    (6) item -> . stmt
    (7) decl -> . type varlist SEMICOLON
    (14) func -> . type ID LPAREN params RPAREN LBRACE funcbody RBRACE
    (25) stmt -> . ID EQUALS expr SEMICOLON
    (26) stmt -> . ID LSQUARE expr RSQUARE EQUALS expr SEMICOLON
    (27) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (28) stmt -> . IF LPAREN expr RPAREN LBRACE block RBRACE else_block
    (35) stmt -> . WHILE LPAREN expr RPAREN LBRACE block RBRACE
    (36) stmt -> . ID LPAREN call_args RPAREN SEMICOLON
    (8) type -> . INT
    (9) type -> . FLOAT

    ID              shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    program                        shift and go to state 1
    items                          shift and go to state 2
    item                           shift and go to state 3
    decl                           shift and go to state 4
    func                           shift and go to state 5
    stmt                           shift and go to state 6
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> items .
    (2) items -> items . item
    (4) item -> . decl
    (5) item -> . func
    (6) item -> . stmt
    (7) decl -> . type varlist SEMICOLON
    (14) func -> . type ID LPAREN params RPAREN LBRACE funcbody RBRACE
    (25) stmt -> . ID EQUALS expr SEMICOLON
    (26) stmt -> . ID LSQUARE expr RSQUARE EQUALS expr SEMICOLON
    (27) stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (28) stmt -> . IF LPAREN expr RPAREN LBRACE block RBRACE else_block
    (35) stmt -> . WHILE LPAREN expr RPAREN LBRACE block RBRACE
    (36) stmt -> . ID LPAREN call_args RPAREN SEMICOLON
    (8) type -> . INT
    (9) type -> . FLOAT

    $end            reduce using rule 1 (program -> items .)
    ID              shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    item                           shift and go to state 14
    decl                           shift and go to state 4
    func                           shift and go to state 5
    stmt                           shift and go to state 6
    type                           shift and go to state 7

state 3

    (3) items -> item .

    ID              reduce using rule 3 (items -> item .)
    PRINT           reduce using rule 3 (items -> item .)
    IF              reduce using rule 3 (items -> item .)
    WHILE           reduce using rule 3 (items -> item .)
    INT             reduce using rule 3 (items -> item .)
    FLOAT           reduce using rule 3 (items -> item .)
    $end            reduce using rule 3 (items -> item .)


state 4

    (4) item -> decl .

    ID              reduce using rule 4 (item -> decl .)
    PRINT           reduce using rule 4 (item -> decl .)
    IF              reduce using rule 4 (item -> decl .)
    WHILE           reduce using rule 4 (item -> decl .)
    INT             reduce using rule 4 (item -> decl .)
    FLOAT           reduce using rule 4 (item -> decl .)
    $end            reduce using rule 4 (item -> decl .)


state 5

    (5) item -> func .

    ID              reduce using rule 5 (item -> func .)
    PRINT           reduce using rule 5 (item -> func .)
    IF              reduce using rule 5 (item -> func .)
    WHILE           reduce using rule 5 (item -> func .)
    INT             reduce using rule 5 (item -> func .)
    FLOAT           reduce using rule 5 (item -> func .)
    $end            reduce using rule 5 (item -> func .)


state 6

    (6) item -> stmt .

    ID              reduce using rule 6 (item -> stmt .)
    PRINT           reduce using rule 6 (item -> stmt .)
    IF              reduce using rule 6 (item -> stmt .)
    WHILE           reduce using rule 6 (item -> stmt .)
    INT             reduce using rule 6 (item -> stmt .)
    FLOAT           reduce using rule 6 (item -> stmt .)
    $end            reduce using rule 6 (item -> stmt .)


state 7

    (7) decl -> type . varlist SEMICOLON
    (14) func -> type . ID LPAREN params RPAREN LBRACE funcbody RBRACE
    (10) varlist -> . varlist COMMA var
    (11) varlist -> . var
    (12) var -> . ID
    (13) var -> . ID LSQUARE NUMBER RSQUARE

    ID              shift and go to state 16

    varlist                        shift and go to state 15
    var                            shift and go to state 17

state 8

    (25) stmt -> ID . EQUALS expr SEMICOLON
    (26) stmt -> ID . LSQUARE expr RSQUARE EQUALS expr SEMICOLON
    (36) stmt -> ID . LPAREN call_args RPAREN SEMICOLON

    EQUALS          shift and go to state 18
    LSQUARE         shift and go to state 19
    LPAREN          shift and go to state 20


state 9

    (27) stmt -> PRINT . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 21


state 10

    (28) stmt -> IF . LPAREN expr RPAREN LBRACE block RBRACE else_block

    LPAREN          shift and go to state 22


state 11

    (35) stmt -> WHILE . LPAREN expr RPAREN LBRACE block RBRACE

    LPAREN          shift and go to state 23


state 12

    (8) type -> INT .

    ID              reduce using rule 8 (type -> INT .)


state 13

    (9) type -> FLOAT .

    ID              reduce using rule 9 (type -> FLOAT .)


state 14

    (2) items -> items item .

    ID              reduce using rule 2 (items -> items item .)
    PRINT           reduce using rule 2 (items -> items item .)
    IF              reduce using rule 2 (items -> items item .)
    WHILE           reduce using rule 2 (items -> items item .)
    INT             reduce using rule 2 (items -> items item .)
    FLOAT           reduce using rule 2 (items -> items item .)
    $end            reduce using rule 2 (items -> items item .)


state 15

    (7) decl -> type varlist . SEMICOLON
    (10) varlist -> varlist . COMMA var

    SEMICOLON       shift and go to state 24
    COMMA           shift and go to state 25


state 16

    (14) func -> type ID . LPAREN params RPAREN LBRACE funcbody RBRACE
    (12) var -> ID .
    (13) var -> ID . LSQUARE NUMBER RSQUARE

    LPAREN          shift and go to state 26
    SEMICOLON       reduce using rule 12 (var -> ID .)
    COMMA           reduce using rule 12 (var -> ID .)
    LSQUARE         shift and go to state 27


state 17

    (11) varlist -> var .

    SEMICOLON       reduce using rule 11 (varlist -> var .)
    COMMA           reduce using rule 11 (varlist -> var .)


state 18

    (25) stmt -> ID EQUALS . expr SEMICOLON
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NE expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GE expr
    (50) expr -> . FNUMBER
    (51) expr -> . NUMBER
    (52) expr -> . ID
    (53) expr -> . ID LSQUARE expr RSQUARE
    (54) expr -> . ID LPAREN call_args RPAREN

    FNUMBER         shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 28

    expr                           shift and go to state 29

state 19

    (26) stmt -> ID LSQUARE . expr RSQUARE EQUALS expr SEMICOLON
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NE expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GE expr
    (50) expr -> . FNUMBER
    (51) expr -> . NUMBER
    (52) expr -> . ID
    (53) expr -> . ID LSQUARE expr RSQUARE
    (54) expr -> . ID LPAREN call_args RPAREN

    FNUMBER         shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 28

    expr                           shift and go to state 32

state 20

    (36) stmt -> ID LPAREN . call_args RPAREN SEMICOLON
    (37) call_args -> . call_args COMMA expr
    (38) call_args -> . expr
    (39) call_args -> . empty
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NE expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GE expr
    (50) expr -> . FNUMBER
    (51) expr -> . NUMBER
    (52) expr -> . ID
    (53) expr -> . ID LSQUARE expr RSQUARE
    (54) expr -> . ID LPAREN call_args RPAREN
    (55) empty -> .

    FNUMBER         shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 28
    RPAREN          reduce using rule 55 (empty -> .)
    COMMA           reduce using rule 55 (empty -> .)

    call_args                      shift and go to state 33
    expr                           shift and go to state 34
    empty                          shift and go to state 35

state 21

    (27) stmt -> PRINT LPAREN . expr RPAREN SEMICOLON
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NE expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GE expr
    (50) expr -> . FNUMBER
    (51) expr -> . NUMBER
    (52) expr -> . ID
    (53) expr -> . ID LSQUARE expr RSQUARE
    (54) expr -> . ID LPAREN call_args RPAREN

    FNUMBER         shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 28

    expr                           shift and go to state 36

state 22

    (28) stmt -> IF LPAREN . expr RPAREN LBRACE block RBRACE else_block
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NE expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GE expr
    (50) expr -> . FNUMBER
    (51) expr -> . NUMBER
    (52) expr -> . ID
    (53) expr -> . ID LSQUARE expr RSQUARE
    (54) expr -> . ID LPAREN call_args RPAREN

    FNUMBER         shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 28

    expr                           shift and go to state 37

state 23

    (35) stmt -> WHILE LPAREN . expr RPAREN LBRACE block RBRACE
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr MINUS expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr DIVIDE expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NE expr
    (46) expr -> . expr LT expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GE expr
    (50) expr -> . FNUMBER
    (51) expr -> . NUMBER
    (52) expr -> . ID
    (53) expr -> . ID LSQUARE expr RSQUARE
    (54) expr -> . ID LPAREN call_args RPAREN

    FNUMBER         shift and go to state 30
    NUMBER          shift and go to state 31
    ID              shift and go to state 28

    expr                           shift and go to state 38

state 24

    (7) decl -> type varlist SEMICOLON .

    ID              reduce using rule 7 (decl -> type varlist SEMICOLON .)
    PRINT           reduce using rule 7 (decl -> type varlist SEMICOLON .)
    IF              reduce using rule 7 (decl -> type varlist SEMICOLON .)
    WHILE           reduce using rule 7 (decl -> type varlist SEMICOLON .)
    INT             reduce using rule 7 (decl -> type varlist SEMICOLON .)
    FLOAT           reduce using rule 7 (decl -> type varlist SEMICOLON .)
    $end            reduce using rule 7 (decl -> type varlist SEMICOLON .)


state 25

    (10) varlist -> varlist COMMA . var
    (12) var -> . ID
    (13) var -> . ID LSQUARE NUMBER RSQUARE

    ID              shift and go to state 40

    var                            shift and go to state 39

state 26

    (14) func -> type ID LPAREN . params RPAREN LBRACE funcbody RBRACE
    (15) params -> . paramlist
    (16) params -> . empty
    (17) paramlist -> . paramlist COMMA param
    (18) paramlist -> . param
    (55) empty -> .
    (19) param -> . type ID
    (8) type -> . INT
    (9) type -> . FLOAT

    RPAREN          reduce using rule 55 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    type                           shift and go to state 41
    params                         shift and go to state 42
    paramlist                      shift and go to state 43
    empty                          shift and go to state 44
    param                          shift and go to state 45

state 27

    (13) var -> ID LSQUARE . NUMBER RSQUARE

    NUMBER          shift and go to state 46


state 28

    (52) expr -> ID .
    (53) expr -> ID . LSQUARE expr RSQUARE
    (54) expr -> ID . LPAREN call_args RPAREN

    SEMICOLON       reduce using rule 52 (expr -> ID .)
    PLUS            reduce using rule 52 (expr -> ID .)
    MINUS           reduce using rule 52 (expr -> ID .)
    TIMES           reduce using rule 52 (expr -> ID .)
    DIVIDE          reduce using rule 52 (expr -> ID .)
    EQ              reduce using rule 52 (expr -> ID .)
    NE              reduce using rule 52 (expr -> ID .)
    LT              reduce using rule 52 (expr -> ID .)
    GT              reduce using rule 52 (expr -> ID .)
    LE              reduce using rule 52 (expr -> ID .)
    GE              reduce using rule 52 (expr -> ID .)
    RSQUARE         reduce using rule 52 (expr -> ID .)
    RPAREN          reduce using rule 52 (expr -> ID .)
    COMMA           reduce using rule 52 (expr -> ID .)
    LSQUARE         shift and go to state 47
    LPAREN          shift and go to state 48


state 29

    (25) stmt -> ID EQUALS expr . SEMICOLON
    (40) expr -> expr . PLUS expr
    (41) expr -> expr . MINUS expr
    (42) expr -> expr . TIMES expr
    (43) expr -> expr . DIVIDE expr
    (44) expr -> expr . EQ expr
    (45) expr -> expr . NE expr
    (46) expr -> expr . LT expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . GE expr

    SEMICOLON       shift and go to state 49
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    EQ              shift and go to state 54
    NE              shift and go to state 55
    LT              shift and go to state 56
    GT              shift and go to state 57
    LE              shift and go to state 58
    GE              shift and go to state 59


state 30

    (50) expr -> FNUMBER .

    SEMICOLON       reduce using rule 50 (expr -> FNUMBER .)
    PLUS            reduce using rule 50 (expr -> FNUMBER .)
    MINUS           reduce using rule 50 (expr -> FNUMBER .)
    TIMES           reduce using rule 50 (expr -> FNUMBER .)
    DIVIDE          reduce using rule 50 (expr -> FNUMBER .)
    EQ              reduce using rule 50 (expr -> FNUMBER .)
    NE              reduce using rule 50 (expr -> FNUMBER .)
    LT              reduce using rule 50 (expr -> FNUMBER .)
    GT              reduce using rule 50 (expr -> FNUMBER .)
    LE              reduce using rule 50 (expr -> FNUMBER .)
    GE              reduce using rule 50 (expr -> FNUMBER .)
    RSQUARE         reduce using rule 50 (expr -> FNUMBER .)
    RPAREN          reduce using rule 50 (expr -> FNUMBER .)
    COMMA           reduce using rule 50 (expr -> FNUMBER .)


state 31

    (51) expr -> NUMBER .

    SEMICOLON       reduce using rule 51 (expr -> NUMBER .)
    PLUS            reduce using rule 51 (expr -> NUMBER .)
    MINUS           reduce using rule 51 (expr -> NUMBER .)
    TIMES           reduce using rule 51 (expr -> NUMBER .)
    DIVIDE          reduce using rule 51 (expr -> NUMBER .)
    EQ              reduce using rule 51 (expr -> NUMBER .)
    NE              reduce using rule 51 (expr -> NUMBER .)
    LT              reduce using rule 51 (expr -> NUMBER .)
    GT              reduce using rule 51 (expr -> NUMBER .)
    LE              reduce using rule 51 (expr -> NUMBER .)
    GE              reduce using rule 51 (expr -> NUMBER .)
    RSQUARE         reduce using rule 51 (expr -> NUMBER .)
    RPAREN          reduce using rule 51 (expr -> NUMBER .)
    COMMA           reduce using rule 51 (expr -> NUMBER .)


state 32

    (26) stmt -> ID LSQUARE expr . RSQUARE EQUALS expr SEMICOLON
    (40) expr -> expr . PLUS expr
    (41) expr -> expr . MINUS expr
    (42) expr -> expr . TIMES expr
    (43) expr -> expr . DIVIDE expr
    (44) expr -> expr . EQ expr
    (45) expr -> expr . NE expr
    (46) expr -> expr . LT expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . GE expr

    RSQUARE         shift and go to state 60
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    EQ              shift and go to state 54
    NE              shift and go to state 55
    LT              shift and go to state 56
    GT              shift and go to state 57
    LE              shift and go to state 58
    GE              shift and go to state 59


state 33

    (36) stmt -> ID LPAREN call_args . RPAREN SEMICOLON
    (37) call_args -> call_args . COMMA expr

    RPAREN          shift and go to state 61
    COMMA           shift and go to state 62


state 34

    (38) call_args -> expr .
    (40) expr -> expr . PLUS expr
    (41) expr -> expr . MINUS expr
    (42) expr -> expr . TIMES expr
    (43) expr -> expr . DIVIDE expr
    (44) expr -> expr . EQ expr
    (45) expr -> expr . NE expr
    (46) expr -> expr . LT expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . GE expr

    RPAREN          reduce using rule 38 (call_args -> expr .)
    COMMA           reduce using rule 38 (call_args -> expr .)
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    EQ              shift and go to state 54
    NE              shift and go to state 55
    LT              shift and go to state 56
    GT              shift and go to state 57
    LE              shift and go to state 58
    GE              shift and go to state 59


state 35

    (39) call_args -> empty .

    RPAREN          reduce using rule 39 (call_args -> empty .)
    COMMA           reduce using rule 39 (call_args -> empty .)


state 36

    (27) stmt -> PRINT LPAREN expr . RPAREN SEMICOLON
    (40) expr -> expr . PLUS expr
    (41) expr -> expr . MINUS expr
    (42) expr -> expr . TIMES expr
    (43) expr -> expr . DIVIDE expr
    (44) expr -> expr . EQ expr
    (45) expr -> expr . NE expr
    (46) expr -> expr . LT expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . GE expr

    RPAREN          shift and go to state 63
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    EQ              shift and go to state 54
    NE              shift and go to state 55
    LT              shift and go to state 56
    GT              shift and go to state 57
    LE              shift and go to state 58
    GE              shift and go to state 59


state 37

    (28) stmt -> IF LPAREN expr . RPAREN LBRACE block RBRACE else_block
    (40) expr -> expr . PLUS expr
    (41) expr -> expr . MINUS expr
    (42) expr -> expr . TIMES expr
